# erosbag

./: Cargo.toml  README.md
crates/erosbag/: Cargo.toml  README.md
crates/erosbag-cli/: Cargo.toml  README.md
crates/erosbag-cli/src/: arguments.rs  cli.rs  error.rs  main.rs  util.rs
crates/erosbag-cli/src/commands/: extract_image_data.rs  extract_images.rs  extract_point_clouds.rs  extract_transforms.rs  mod.rs  repair.rs  test.rs
crates/erosbag-core/: Cargo.toml  README.md  diesel.toml
crates/erosbag-core/migrations/2022-08-19-082745_initial/: up.sql
crates/erosbag-core/src/: error.rs  identifier.rs  lib.rs  mcap.rs  mcap_file.rs  rosbag.rs  rosbag_metadata.rs  rosbag_open_options.rs
crates/erosbag-core/src/bagfile/: error.rs  mod.rs  models.rs  point_cloud_extensions.rs  rosbag_file.rs  schema.rs
crates/erosbag-core/src/dto/: message.rs  mod.rs  overview.rs  topics.rs
crates/erosbag-core/src/ros_messages/: builtin_msgs.rs  geometry_msgs.rs  mod.rs  nav_msgs.rs  sensor_msgs.rs  std_msgs.rs  tf2_msgs.rs  visualization_msgs.rs
crates/erosbag-core/src/topics/: mod.rs  qos_profile.rs  topic.rs
crates/erosbag-transform/: Cargo.toml  README.md
crates/erosbag-transform/src/: append.rs  error.rs  lib.rs  repair.rs
crates/erosbag/src/: lib.rs
