[package]
name = "erosbag-cli"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for processing ROS2 bags."


[dependencies]
erosbag = { version = "0.0.1-alpha.10", path = "../erosbag" }
ecoord = { workspace = true }
epoint = { workspace = true }
eimage = { workspace = true }

thiserror = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
humantime = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }


[[bin]]
name = "erosbag"
path = "src/main.rs"
