[package]
name = "erosbag-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Core primitives and operations for processing ROS2 bags."

[dependencies]
epoint = { workspace = true }
eimage = { workspace = true }
ecoord = { workspace = true }

diesel = { workspace = true, features = ["sqlite", "r2d2"] }
diesel_migrations = { workspace = true, features = ["sqlite"] }
r2d2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
serde_repr = { workspace = true }
serde_yaml = { workspace = true }
serde-big-array = { workspace = true }
cdr = { workspace = true }
thiserror = { workspace = true }
polars = { workspace = true, features = ["lazy", "ndarray", "dtype-categorical"] }
ndarray = { workspace = true }
indextree = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nalgebra = { workspace = true }
chrono = { workspace = true }
itertools = { workspace = true }
image = { workspace = true }
