[package]
name = "erosbag-transform"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Supplementary operations for processing ROS2 bags."

[dependencies]
erosbag-core = { version = "0.0.1-alpha.3", path = "../erosbag-core" }

epoint = { workspace = true }
ecoord = { workspace = true }

thiserror = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
nalgebra = { workspace = true }
chrono = { workspace = true }
