[package]
name = "erosbag"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for processing rosbags"


[dependencies]
erosbag-core = { version = "0.0.1-alpha.1", path = "../erosbag-core", registry = "custom" }
erosbag-transform = { version = "0.0.1-alpha.1", path = "../erosbag-transform", registry = "custom" }
