[package]
name = "erosbag"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Library for processing ROS2 bags."


[dependencies]
erosbag-core = { version = "0.0.1-alpha.12", path = "../erosbag-core" }
erosbag-transform = { version = "0.0.1-alpha.12", path = "../erosbag-transform" }
